# Actarium

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy-frontend.yml
backend/: .env.example  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/data/: ingest_state.json
backend/db/: schema.sql  supabase_client.py
backend/models/: schemas.py
backend/pipeline/: embedder.py  generator.py  ingest.py
backend/routers/: audio.py  chat.py  search.py  topics.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/search/: page.tsx
frontend/app/topics/[slug]/: page.tsx
frontend/lib/: api.ts  auth.ts
frontend/types/: api.ts
