[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "gtts>=2.5.4",
    "langchain>=1.3.9",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.5",
    "slowapi>=0.1.9",
    "supabase>=2.31.0",
]
